Tenant prayers and API spec file update
